// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Ds* public API contract > pins the public props/events of DsAppShell 1`] = `
{
  "emits": [
    "update:drawerOpen",
  ],
  "name": "DsAppShell",
  "props": {
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "drawerOpen": {
      "hasDefault": true,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsAvatar 1`] = `
{
  "emits": [],
  "name": "DsAvatar",
  "props": {
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "icon": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "name": {
      "hasDefault": false,
      "required": false,
    },
    "shape": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "src": {
      "hasDefault": false,
      "required": false,
    },
    "status": {
      "hasDefault": false,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsBadge 1`] = `
{
  "emits": [],
  "name": "DsBadge",
  "props": {
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "dot": {
      "hasDefault": true,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "label": {
      "hasDefault": false,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsBanner 1`] = `
{
  "emits": [
    "dismiss",
  ],
  "name": "DsBanner",
  "props": {
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "dismissLabel": {
      "hasDefault": true,
      "required": false,
    },
    "dismissible": {
      "hasDefault": true,
      "required": false,
    },
    "icon": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "message": {
      "hasDefault": false,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "title": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsBreadcrumbs 1`] = `
{
  "emits": [],
  "name": "DsBreadcrumbs",
  "props": {
    "ariaLabel": {
      "hasDefault": true,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "items": {
      "hasDefault": true,
      "required": false,
    },
    "separator": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsButton 1`] = `
{
  "emits": [
    "click",
  ],
  "name": "DsButton",
  "props": {
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "density": {
      "hasDefault": true,
      "required": false,
    },
    "disabled": {
      "hasDefault": true,
      "required": false,
    },
    "icon": {
      "hasDefault": false,
      "required": false,
    },
    "iconRight": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "label": {
      "hasDefault": false,
      "required": false,
    },
    "loading": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "type": {
      "hasDefault": true,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsCard 1`] = `
{
  "emits": [
    "click",
  ],
  "name": "DsCard",
  "props": {
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "clickable": {
      "hasDefault": true,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "selected": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "subtitle": {
      "hasDefault": false,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "title": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsChip 1`] = `
{
  "emits": [
    "click",
    "remove",
  ],
  "name": "DsChip",
  "props": {
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "clickable": {
      "hasDefault": true,
      "required": false,
    },
    "disabled": {
      "hasDefault": true,
      "required": false,
    },
    "icon": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "label": {
      "hasDefault": false,
      "required": false,
    },
    "removable": {
      "hasDefault": true,
      "required": false,
    },
    "removeLabel": {
      "hasDefault": true,
      "required": false,
    },
    "selected": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsCommandIcon 1`] = `
{
  "emits": [],
  "name": "DsCommandIcon",
  "props": {
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "label": {
      "hasDefault": false,
      "required": false,
    },
    "name": {
      "hasDefault": false,
      "required": true,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsCrudPage 1`] = `
{
  "emits": [
    "created",
    "deleted",
    "error",
    "updated",
  ],
  "name": "DsCrudPage",
  "props": {
    "cancelLabel": {
      "hasDefault": true,
      "required": false,
    },
    "deleteLabel": {
      "hasDefault": true,
      "required": false,
    },
    "editLabel": {
      "hasDefault": true,
      "required": false,
    },
    "editTitle": {
      "hasDefault": true,
      "required": false,
    },
    "emptyDescription": {
      "hasDefault": true,
      "required": false,
    },
    "emptyTitle": {
      "hasDefault": true,
      "required": false,
    },
    "errorTitle": {
      "hasDefault": true,
      "required": false,
    },
    "idPrefix": {
      "hasDefault": true,
      "required": false,
    },
    "loadingLabel": {
      "hasDefault": true,
      "required": false,
    },
    "newLabel": {
      "hasDefault": true,
      "required": false,
    },
    "resource": {
      "hasDefault": false,
      "required": true,
    },
    "saveLabel": {
      "hasDefault": true,
      "required": false,
    },
    "searchLabel": {
      "hasDefault": true,
      "required": false,
    },
    "searchPlaceholder": {
      "hasDefault": true,
      "required": false,
    },
    "searchable": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsDatePicker 1`] = `
{
  "emits": [
    "blur",
    "focus",
    "update:modelValue",
  ],
  "name": "DsDatePicker",
  "props": {
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "density": {
      "hasDefault": true,
      "required": false,
    },
    "disabled": {
      "hasDefault": true,
      "required": false,
    },
    "errorMessage": {
      "hasDefault": false,
      "required": false,
    },
    "hint": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "invalid": {
      "hasDefault": true,
      "required": false,
    },
    "label": {
      "hasDefault": false,
      "required": false,
    },
    "max": {
      "hasDefault": false,
      "required": false,
    },
    "min": {
      "hasDefault": false,
      "required": false,
    },
    "modelValue": {
      "hasDefault": true,
      "required": false,
    },
    "name": {
      "hasDefault": false,
      "required": false,
    },
    "placeholder": {
      "hasDefault": false,
      "required": false,
    },
    "readonly": {
      "hasDefault": true,
      "required": false,
    },
    "required": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "triggerLabel": {
      "hasDefault": true,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsDialog 1`] = `
{
  "emits": [
    "close",
    "open",
    "update:modelValue",
  ],
  "name": "DsDialog",
  "props": {
    "ariaLabel": {
      "hasDefault": false,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "closeLabel": {
      "hasDefault": true,
      "required": false,
    },
    "description": {
      "hasDefault": false,
      "required": false,
    },
    "hideClose": {
      "hasDefault": true,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "modelValue": {
      "hasDefault": true,
      "required": false,
    },
    "persistent": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "title": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsDockLayout 1`] = `
{
  "emits": [
    "resize-region",
  ],
  "name": "DsDockLayout",
  "props": {
    "ariaLabel": {
      "hasDefault": true,
      "required": false,
    },
    "bottomSize": {
      "hasDefault": true,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "leftSize": {
      "hasDefault": true,
      "required": false,
    },
    "maxSize": {
      "hasDefault": true,
      "required": false,
    },
    "minSize": {
      "hasDefault": true,
      "required": false,
    },
    "rightSize": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "step": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "topSize": {
      "hasDefault": true,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsDockPanel 1`] = `
{
  "emits": [
    "close",
    "toggle-collapse",
  ],
  "name": "DsDockPanel",
  "props": {
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "closable": {
      "hasDefault": true,
      "required": false,
    },
    "collapsed": {
      "hasDefault": true,
      "required": false,
    },
    "collapsible": {
      "hasDefault": true,
      "required": false,
    },
    "density": {
      "hasDefault": true,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "title": {
      "hasDefault": false,
      "required": true,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsDrawer 1`] = `
{
  "emits": [
    "close",
    "open",
    "update:modelValue",
  ],
  "name": "DsDrawer",
  "props": {
    "ariaLabel": {
      "hasDefault": true,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "closeLabel": {
      "hasDefault": true,
      "required": false,
    },
    "hideClose": {
      "hasDefault": true,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "modelValue": {
      "hasDefault": true,
      "required": false,
    },
    "navLabel": {
      "hasDefault": true,
      "required": false,
    },
    "persistent": {
      "hasDefault": true,
      "required": false,
    },
    "side": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "title": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsEmptyState 1`] = `
{
  "emits": [],
  "name": "DsEmptyState",
  "props": {
    "ariaLabel": {
      "hasDefault": false,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "description": {
      "hasDefault": false,
      "required": false,
    },
    "icon": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "title": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsFilterBar 1`] = `
{
  "emits": [
    "apply",
    "reset",
  ],
  "name": "DsFilterBar",
  "props": {
    "applyLabel": {
      "hasDefault": true,
      "required": false,
    },
    "ariaLabel": {
      "hasDefault": false,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "density": {
      "hasDefault": true,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "loading": {
      "hasDefault": true,
      "required": false,
    },
    "resetLabel": {
      "hasDefault": true,
      "required": false,
    },
    "showActions": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsFooter 1`] = `
{
  "emits": [],
  "name": "DsFooter",
  "props": {
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsForm 1`] = `
{
  "emits": [
    "reset",
    "submit",
    "update:modelValue",
  ],
  "name": "DsForm",
  "props": {
    "columns": {
      "hasDefault": false,
      "required": false,
    },
    "disabled": {
      "hasDefault": true,
      "required": false,
    },
    "idPrefix": {
      "hasDefault": true,
      "required": false,
    },
    "legend": {
      "hasDefault": false,
      "required": false,
    },
    "loading": {
      "hasDefault": true,
      "required": false,
    },
    "modelValue": {
      "hasDefault": false,
      "required": false,
    },
    "resetLabel": {
      "hasDefault": true,
      "required": false,
    },
    "schema": {
      "hasDefault": false,
      "required": true,
    },
    "showActions": {
      "hasDefault": true,
      "required": false,
    },
    "showReset": {
      "hasDefault": true,
      "required": false,
    },
    "submitLabel": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsFormLayout 1`] = `
{
  "emits": [],
  "name": "DsFormLayout",
  "props": {
    "ariaLabel": {
      "hasDefault": false,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "columns": {
      "hasDefault": true,
      "required": false,
    },
    "density": {
      "hasDefault": true,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "legend": {
      "hasDefault": false,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsFormPage 1`] = `
{
  "emits": [
    "reset",
    "submit",
    "update:modelValue",
  ],
  "name": "DsFormPage",
  "props": {
    "columns": {
      "hasDefault": false,
      "required": false,
    },
    "description": {
      "hasDefault": false,
      "required": false,
    },
    "disabled": {
      "hasDefault": true,
      "required": false,
    },
    "idPrefix": {
      "hasDefault": true,
      "required": false,
    },
    "legend": {
      "hasDefault": false,
      "required": false,
    },
    "loading": {
      "hasDefault": true,
      "required": false,
    },
    "modelValue": {
      "hasDefault": false,
      "required": false,
    },
    "resetLabel": {
      "hasDefault": false,
      "required": false,
    },
    "schema": {
      "hasDefault": false,
      "required": true,
    },
    "showActions": {
      "hasDefault": true,
      "required": false,
    },
    "showReset": {
      "hasDefault": true,
      "required": false,
    },
    "submitLabel": {
      "hasDefault": false,
      "required": false,
    },
    "title": {
      "hasDefault": false,
      "required": true,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsHeader 1`] = `
{
  "emits": [
    "toggle-menu",
  ],
  "name": "DsHeader",
  "props": {
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "menuLabel": {
      "hasDefault": true,
      "required": false,
    },
    "showMenu": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "title": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsInput 1`] = `
{
  "emits": [
    "blur",
    "focus",
    "update:modelValue",
  ],
  "name": "DsInput",
  "props": {
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "density": {
      "hasDefault": true,
      "required": false,
    },
    "disabled": {
      "hasDefault": true,
      "required": false,
    },
    "errorMessage": {
      "hasDefault": false,
      "required": false,
    },
    "hint": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "invalid": {
      "hasDefault": true,
      "required": false,
    },
    "label": {
      "hasDefault": false,
      "required": false,
    },
    "modelValue": {
      "hasDefault": false,
      "required": false,
    },
    "multiline": {
      "hasDefault": true,
      "required": false,
    },
    "name": {
      "hasDefault": false,
      "required": false,
    },
    "placeholder": {
      "hasDefault": false,
      "required": false,
    },
    "readonly": {
      "hasDefault": true,
      "required": false,
    },
    "required": {
      "hasDefault": true,
      "required": false,
    },
    "rows": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "type": {
      "hasDefault": true,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsLogo 1`] = `
{
  "emits": [],
  "name": "DsLogo",
  "props": {
    "ariaLabel": {
      "hasDefault": false,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "href": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "mark": {
      "hasDefault": false,
      "required": false,
    },
    "showTagline": {
      "hasDefault": true,
      "required": false,
    },
    "showText": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "tagline": {
      "hasDefault": false,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "text": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsMetricGrid 1`] = `
{
  "emits": [],
  "name": "DsMetricGrid",
  "props": {
    "ariaLabel": {
      "hasDefault": false,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "columns": {
      "hasDefault": true,
      "required": false,
    },
    "density": {
      "hasDefault": true,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "metrics": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsPage 1`] = `
{
  "emits": [],
  "name": "DsPage",
  "props": {
    "ariaLabel": {
      "hasDefault": false,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "subtitle": {
      "hasDefault": false,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "title": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsPageHeader 1`] = `
{
  "emits": [],
  "name": "DsPageHeader",
  "props": {
    "ariaLabel": {
      "hasDefault": false,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "description": {
      "hasDefault": false,
      "required": false,
    },
    "eyebrow": {
      "hasDefault": false,
      "required": false,
    },
    "headingLevel": {
      "hasDefault": true,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "title": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsQuickAccessToolbar 1`] = `
{
  "emits": [
    "command",
  ],
  "name": "DsQuickAccessToolbar",
  "props": {
    "ariaLabel": {
      "hasDefault": true,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "density": {
      "hasDefault": true,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "items": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsRibbon 1`] = `
{
  "emits": [
    "command",
    "update:activeTab",
  ],
  "name": "DsRibbon",
  "props": {
    "activeTab": {
      "hasDefault": false,
      "required": false,
    },
    "ariaLabel": {
      "hasDefault": true,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "density": {
      "hasDefault": true,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "tabs": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsRibbonCommand 1`] = `
{
  "emits": [
    "click",
  ],
  "name": "DsRibbonCommand",
  "props": {
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "disabled": {
      "hasDefault": true,
      "required": false,
    },
    "icon": {
      "hasDefault": false,
      "required": true,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "label": {
      "hasDefault": false,
      "required": true,
    },
    "selected": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsRibbonGroup 1`] = `
{
  "emits": [
    "command",
  ],
  "name": "DsRibbonGroup",
  "props": {
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "commands": {
      "hasDefault": true,
      "required": false,
    },
    "density": {
      "hasDefault": true,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "label": {
      "hasDefault": false,
      "required": true,
    },
    "labelPosition": {
      "hasDefault": true,
      "required": false,
    },
    "separator": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsSection 1`] = `
{
  "emits": [],
  "name": "DsSection",
  "props": {
    "ariaLabel": {
      "hasDefault": false,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "eyebrow": {
      "hasDefault": false,
      "required": false,
    },
    "headingLevel": {
      "hasDefault": true,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "subtitle": {
      "hasDefault": false,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "title": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsSelect 1`] = `
{
  "emits": [
    "blur",
    "focus",
    "update:modelValue",
  ],
  "name": "DsSelect",
  "props": {
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "density": {
      "hasDefault": true,
      "required": false,
    },
    "disabled": {
      "hasDefault": true,
      "required": false,
    },
    "errorMessage": {
      "hasDefault": false,
      "required": false,
    },
    "hint": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "invalid": {
      "hasDefault": true,
      "required": false,
    },
    "label": {
      "hasDefault": false,
      "required": false,
    },
    "modelValue": {
      "hasDefault": false,
      "required": false,
    },
    "multiple": {
      "hasDefault": true,
      "required": false,
    },
    "name": {
      "hasDefault": false,
      "required": false,
    },
    "options": {
      "hasDefault": true,
      "required": false,
    },
    "placeholder": {
      "hasDefault": false,
      "required": false,
    },
    "readonly": {
      "hasDefault": true,
      "required": false,
    },
    "required": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsSidebar 1`] = `
{
  "emits": [],
  "name": "DsSidebar",
  "props": {
    "ariaLabel": {
      "hasDefault": true,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "collapsed": {
      "hasDefault": true,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsSkeleton 1`] = `
{
  "emits": [],
  "name": "DsSkeleton",
  "props": {
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "lines": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsStateBlock 1`] = `
{
  "emits": [],
  "name": "DsStateBlock",
  "props": {
    "ariaLabel": {
      "hasDefault": false,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "description": {
      "hasDefault": false,
      "required": false,
    },
    "icon": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": false,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "skeletonLines": {
      "hasDefault": true,
      "required": false,
    },
    "state": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "title": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsStatusBar 1`] = `
{
  "emits": [],
  "name": "DsStatusBar",
  "props": {
    "ariaLabel": {
      "hasDefault": true,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "density": {
      "hasDefault": true,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "segments": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsSteps 1`] = `
{
  "emits": [
    "step-click",
  ],
  "name": "DsSteps",
  "props": {
    "ariaLabel": {
      "hasDefault": true,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "clickable": {
      "hasDefault": true,
      "required": false,
    },
    "current": {
      "hasDefault": true,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "orientation": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "steps": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsTable 1`] = `
{
  "emits": [
    "row-click",
    "update:page",
    "update:selectedKeys",
    "update:sort",
  ],
  "name": "DsTable",
  "props": {
    "ariaLabel": {
      "hasDefault": true,
      "required": false,
    },
    "caption": {
      "hasDefault": false,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "columns": {
      "hasDefault": true,
      "required": false,
    },
    "density": {
      "hasDefault": true,
      "required": false,
    },
    "emptyLabel": {
      "hasDefault": true,
      "required": false,
    },
    "emptyValueLabel": {
      "hasDefault": true,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "loading": {
      "hasDefault": true,
      "required": false,
    },
    "loadingLabel": {
      "hasDefault": true,
      "required": false,
    },
    "nextPageLabel": {
      "hasDefault": true,
      "required": false,
    },
    "pagination": {
      "hasDefault": true,
      "required": false,
    },
    "paginationLabel": {
      "hasDefault": true,
      "required": false,
    },
    "previousPageLabel": {
      "hasDefault": true,
      "required": false,
    },
    "rows": {
      "hasDefault": true,
      "required": false,
    },
    "selectAllLabel": {
      "hasDefault": true,
      "required": false,
    },
    "selectRowLabel": {
      "hasDefault": false,
      "required": false,
    },
    "selectable": {
      "hasDefault": true,
      "required": false,
    },
    "selectedKeys": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "sort": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsTabs 1`] = `
{
  "emits": [
    "update:modelValue",
  ],
  "name": "DsTabs",
  "props": {
    "ariaLabel": {
      "hasDefault": true,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "modelValue": {
      "hasDefault": false,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "tabs": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsTimePicker 1`] = `
{
  "emits": [
    "blur",
    "focus",
    "update:modelValue",
  ],
  "name": "DsTimePicker",
  "props": {
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "density": {
      "hasDefault": true,
      "required": false,
    },
    "disabled": {
      "hasDefault": true,
      "required": false,
    },
    "errorMessage": {
      "hasDefault": false,
      "required": false,
    },
    "hint": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "invalid": {
      "hasDefault": true,
      "required": false,
    },
    "label": {
      "hasDefault": false,
      "required": false,
    },
    "max": {
      "hasDefault": false,
      "required": false,
    },
    "min": {
      "hasDefault": false,
      "required": false,
    },
    "modelValue": {
      "hasDefault": true,
      "required": false,
    },
    "name": {
      "hasDefault": false,
      "required": false,
    },
    "placeholder": {
      "hasDefault": false,
      "required": false,
    },
    "readonly": {
      "hasDefault": true,
      "required": false,
    },
    "required": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "step": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "triggerLabel": {
      "hasDefault": true,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsToast 1`] = `
{
  "emits": [
    "dismiss",
  ],
  "name": "DsToast",
  "props": {
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "dismissLabel": {
      "hasDefault": true,
      "required": false,
    },
    "dismissible": {
      "hasDefault": true,
      "required": false,
    },
    "icon": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "message": {
      "hasDefault": false,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "title": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsToastHost 1`] = `
{
  "emits": [],
  "name": "DsToastHost",
  "props": {
    "ariaLabel": {
      "hasDefault": true,
      "required": false,
    },
    "dismissLabel": {
      "hasDefault": true,
      "required": false,
    },
    "position": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsToolbar 1`] = `
{
  "emits": [],
  "name": "DsToolbar",
  "props": {
    "align": {
      "hasDefault": true,
      "required": false,
    },
    "ariaLabel": {
      "hasDefault": false,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "density": {
      "hasDefault": true,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
    "wrap": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsTooltip 1`] = `
{
  "emits": [],
  "name": "DsTooltip",
  "props": {
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "position": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "text": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsTreeExplorer 1`] = `
{
  "emits": [
    "toggle",
    "update:selected",
  ],
  "name": "DsTreeExplorer",
  "props": {
    "ariaLabel": {
      "hasDefault": true,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "density": {
      "hasDefault": true,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "nodes": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;

exports[`Ds* public API contract > pins the public props/events of DsWorkspaceCanvas 1`] = `
{
  "emits": [],
  "name": "DsWorkspaceCanvas",
  "props": {
    "ariaLabel": {
      "hasDefault": true,
      "required": false,
    },
    "class": {
      "hasDefault": false,
      "required": false,
    },
    "id": {
      "hasDefault": false,
      "required": false,
    },
    "intent": {
      "hasDefault": true,
      "required": false,
    },
    "size": {
      "hasDefault": true,
      "required": false,
    },
    "surface": {
      "hasDefault": true,
      "required": false,
    },
    "testId": {
      "hasDefault": false,
      "required": false,
    },
    "variant": {
      "hasDefault": true,
      "required": false,
    },
  },
}
`;